@@ -16,6 +16,7 @@ dyncallback:
   o SPARC32 (v7/v8) support
   o SPARC64 (v9) support
   o POSIX compliance: fallback for wx alloc on systems that don't have mmap()'s MAP_ANON
+  o allocated space used for thunk now always W^X (req. for e.g. OpenBSD >= 6.0)
 general:
   o marked assembly code as not needing an execstack, for safer/easier integration into other
     projects/builds, where needed; this is needed b/c of questionable default behaviours of some
